<resources>
    <string name="app_name">Book Cart MVVM</string>
    <string name="title_activity_login2">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_name">Empty Name</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_password_mismatch">Password not matching</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_you_email_here">Enter you email here</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_already_registered_sign_up_please">Not Already Registered? Sign Up Please.</string>
    <string name="error_format_invalid">Format is invalid</string>
    <string name="error_too_short">Too short</string>
    <string name="please_wait">Please wait</string>
    <string name="ok">Ok</string>
    <string name="login_error">Login error</string>
    <string name="sign_up_error">Sign up error</string>
    <string name="sign_up_time_out_error">Sign up error (Timeout)</string>
    <string name="sign_up_400_error">Sign up error (HTTP 400 Bad Request)</string>
    <string name="user_created_logged_in">User created. You are logged in.</string>
    <string name="internet_connection_unavailable">Internet connection unavailable</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="wish_list">Wish List</string>
    <string name="cart_list">Cart List</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="you_will_be_logged_out">You will be logged out. Continue?</string>
    <string name="no_item_available">No item available</string>
    <string name="data_loading_error">Data Loading Error</string>
    <string name="book_details">Book Details</string>
    <string name="id">ID</string>
    <string name="title">Title</string>
    <string name="subtitle">SubTitle</string>
    <string name="description">Description</string>
    <string name="created_at">Created At</string>
    <string name="updated_at">Updated At</string>
</resources>
