<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/color_white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".view.LoginActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_big"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_normal"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_login"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/margin_big"
            android:background="@drawable/btn_selector_generic_button"
            android:gravity="center"
            android:text="@string/login"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_medium"/>

        <TextView
            android:id="@+id/sign_up_suggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:textColor="@color/gray"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/not_already_registered_sign_up_please" />

        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_sign_up"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@drawable/btn_selector_generic_button"
            android:gravity="center"
            android:text="@string/sign_up"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_medium"/>

    </LinearLayout>
</ScrollView>
